project (EXAMPLE)

get_filename_component (GRAPHENE_PROJECT_DIR ${CMAKE_CURRENT_SOURCE_DIR} DIRECTORY)
get_filename_component (GRAPHENE_BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR} DIRECTORY)

file (GLOB_RECURSE EXAMPLE_SOURCES "src/*.cpp")
include_directories (${GRAPHENE_PROJECT_DIR}/src ${MATH_INCLUDE_DIRS})

set (EXAMPLE_EXECUTABLE "example")
add_executable (${EXAMPLE_EXECUTABLE} ${EXAMPLE_SOURCES})

link_directories (${GRAPHENE_BINARY_DIR})
target_link_libraries (${EXAMPLE_EXECUTABLE} ${GRAPHENE_SHARED})
